--- a/src/pages/Home/styles/_intro.scss
+++ b/src/pages/Home/styles/_intro.scss
@@ -113,20 +113,21 @@
     }
 
     .bottom {
-      max-width: 500px;
-      line-height: 1.5;
+      width: 70.5%;
+      line-height: 1.8;
 
       p {
-        font-size: 1.6rem;
+        font-size: 1.1vw;
+        font-feature-settings: "palt" 1;
 
         span {
-          font-size: 1.7rem;
+          font-size: 1.2vw;
           letter-spacing: 0;
         }
       }
 
       @include maxW(1023px) {
-        max-width: 100%;
+        width: 100%;
 
         p {
           font-size: 1.4rem;
