--- a/src/pages/Home/styles/_philosophy.scss
+++ b/src/pages/Home/styles/_philosophy.scss
@@ -52,7 +52,9 @@
     position: absolute;
     bottom: 0;
     left: 0;
-    font-size: 3rem;
+    font-size: 3vw;
+    letter-spacing: -0.5px;
+    line-height: 0.95;
 
     @include maxW(1023px) {
       position: initial;
@@ -62,10 +64,13 @@
 
   &__bg {
     position: relative;
+    width: 100%;
+    height: 100%;
 
     svg {
       display: block;
       width: 100%;
+      height: 100%;
 
       path,
       rect {
@@ -76,7 +81,6 @@
     @include maxW(1023px) {
       svg {
         width: 100%;
-        height: 100%;
       }
     }
   }
