--- a/src/pages/Home/styles/_philosophy.scss
+++ b/src/pages/Home/styles/_philosophy.scss
@@ -19,7 +19,7 @@
     position: sticky;
     top: 60px;
     left: 0;
-    height: 100%;
+    height: calc(100vh - 74px);
 
     h2 {
       position: absolute;
@@ -31,6 +31,7 @@
 
     @include maxW(1023px) {
       width: 100%;
+      height: 100%;
       position: relative;
       top: 0;
 
@@ -93,6 +94,7 @@
 
     h2 {
       font-size: 3.4rem;
+      letter-spacing: -0.7px;
       font-weight: 400;
       line-height: 1.1;
     }
@@ -113,6 +115,7 @@
       width: 1px;
       height: 25px;
       background-color: currentColor;
+      margin: 8px auto 5px;
     }
 
     @include maxW(1023px) {
@@ -144,7 +147,6 @@
       font-size: 1.6rem;
       line-height: 1.5;
       margin-bottom: 35px;
-      // letter-spacing: -0.96px;
     }
 
     @include maxW(1023px) {
@@ -152,7 +154,6 @@
 
       p {
         font-size: 1.4rem;
-        // letter-spacing: -0.84px;
         margin-bottom: 30px;
       }
     }
@@ -162,12 +163,16 @@
     p {
       font-size: 1.7rem;
       line-height: 1.5;
-      // letter-spacing: -0.34px;
       margin-bottom: 35px;
 
       &:last-child {
         margin-bottom: initial;
       }
+    }
+
+    .line {
+      font-size: 1.6rem;
+      margin-bottom: 35px;
     }
 
     @include maxW(1023px) {
