--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -7,14 +7,14 @@
   top: 0;
   z-index: 100;
 
-  padding: 25px 30px;
+  padding: 25px 30px 0;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 80px;
   align-items: baseline;
 
   @include maxW(1023px) {
-    padding: 15px 18px;
+    padding: 15px 18px 0;
     display: flex;
     justify-content: space-between;
     gap: unset;
