--- a/src/pages/Home/styles/_company.scss
+++ b/src/pages/Home/styles/_company.scss
@@ -117,3 +117,23 @@
     }
   }
 }
+
+.fade {
+  &-enter {
+    opacity: 0;
+  }
+
+  &-enter-active {
+    opacity: 1;
+    transition: opacity 300ms cubic-bezier(0.55, 0.085, 0.68, 0.53);
+  }
+
+  &-exit {
+    opacity: 1;
+  }
+
+  &-exit-active {
+    opacity: 0;
+    transition: opacity 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  }
+}
