fixed philosphy height svg

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -130,6 +130,7 @@
         &:before {
           width: 10px;
           height: 10px;
+          top: 0.2em;
         }
 
         &:checked:before {
