--- a/src/pages/Home/styles/_firstview.scss
+++ b/src/pages/Home/styles/_firstview.scss
@@ -7,6 +7,10 @@
   &__container {
     position: absolute;
     bottom: 25px;
+
+    @include maxW(1023px) {
+      bottom: 15px;
+    }
   }
 
   &__heading {
@@ -29,8 +33,6 @@
 
   @include maxW(1023px) {
     &__heading {
-      bottom: 18px;
-
       h2 {
         font-size: 2.8rem;
         text-align: left;
