--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -14,7 +14,7 @@
   align-items: baseline;
 
   @include maxW(1023px) {
-    padding: 15px 18px 0;
+    padding: 12px 18px 0;
     display: flex;
     justify-content: space-between;
     gap: unset;
@@ -29,7 +29,7 @@
       font-weight: 400;
 
       @include maxW(1023px) {
-        font-size: 2.3rem;
+        font-size: 2.2rem;
       }
     }
   }
@@ -123,14 +123,14 @@
 
       .toggle {
         width: 30px;
-        height: 16px;
+        height: 15px;
 
-        margin: -2px;
+        margin: 0;
 
         &:before {
-          width: 10px;
-          height: 10px;
-          top: 0.2em;
+          width: 11px;
+          height: 11px;
+          top: 2px;
         }
 
         &:checked:before {
