refactor scroll trigger pin spacing (40%)

--- a/src/pages/Home/styles/_intro.scss
+++ b/src/pages/Home/styles/_intro.scss
@@ -24,13 +24,6 @@
     width: 100%;
     margin: 0 auto;
 
-    opacity: 0;
-    transition: opacity 0.2s ease-in-out;
-
-    &.is-active {
-      opacity: 1;
-    }
-
     svg {
       width: 100%;
       height: 100%;
@@ -50,14 +43,17 @@
     }
   }
 
+  &__left {
+    display: flex;
+    align-items: center;
+  }
+
   &__left,
   &__right {
     width: 100%;
     height: calc(100vh - 49px);
     overflow: hidden;
     position: relative;
-    display: flex;
-    align-items: center;
 
     @include maxW(1023px) {
       width: 100%;
@@ -94,10 +90,6 @@
         font-size: 1.3vw;
         text-align: center;
         font-feature-settings: 'palt' 1;
-
-        span {
-          font-size: 1.9rem;
-        }
       }
 
       @include maxW(1023px) {
@@ -105,19 +97,22 @@
 
         p {
           font-size: 1.5rem;
-
-          span {
-            font-size: 1.6rem;
-          }
         }
       }
     }
 
+    .test {
+      position: relative;
+      height: 100%;
+    }
+
     .bottom {
+      transform: translate(0px, 90px) !important;
       line-height: 1.8;
 
       p {
         width: 70.5%;
+        margin: 0 auto;
 
         font-size: 1.1vw;
         font-feature-settings: 'palt' 1;
@@ -143,8 +138,7 @@
 
   &__panel {
     width: 100%;
-    height: 100vh;
-    height: var(--app-height);
+    height: 100%;
     position: absolute;
     top: 0;
     left: 0;
@@ -154,13 +148,6 @@
     justify-content: center;
     align-items: center;
 
-    opacity: 0;
-    transition: opacity 0.2s ease-in-out;
-
-    &.is-active {
-      opacity: 1;
-    }
-
     @include maxW(1023px) {
       display: block;
       height: auto;
@@ -168,5 +155,14 @@
       bottom: 30px;
       padding: 0 18px;
     }
+  }
+}
+
+.text-reveal {
+  position: relative;
+  overflow: hidden;
+
+  span {
+    display: inline-block;
   }
 }
