--- a/src/pages/Home/styles/_intro.scss
+++ b/src/pages/Home/styles/_intro.scss
@@ -17,7 +17,7 @@
   }
 
   @include maxW(1023px) {
-    margin-bottom: 150px;
+    // margin-bottom: 150px;
   }
 
   &__omoty {
@@ -43,9 +43,37 @@
     }
   }
 
-  &__left {
-    display: flex;
-    align-items: center;
+  &__scroll {
+    position: absolute;
+    right: 35px;
+    bottom: 35px;
+
+    .line {
+      display: block;
+      height: 40px;
+      width: 1px;
+      background-color: rgba($color: var(--main-text-rgb), $alpha: 0.3);
+      text-align: center;
+      position: relative;
+      overflow: hidden;
+      margin: 0 auto;
+
+      span {
+        position: absolute;
+        display: block;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 0%;
+        animation: scroll-down 4s infinite;
+        background-color: var(--main-text-cl);
+      }
+    }
+
+    @include maxW(1023px) {
+      right: 22px;
+      bottom: 22px;
+    }
   }
 
   &__left,
@@ -62,6 +90,9 @@
   }
 
   &__left {
+    display: flex;
+    align-items: center;
+
     @include maxW(1023px) {
       position: absolute;
       top: 50%;
@@ -75,7 +106,6 @@
       font-size: 2.4vw;
       font-weight: 400;
       margin-bottom: 25px;
-      text-align: center;
     }
 
     @include maxW(1023px) {
@@ -84,16 +114,34 @@
         margin-bottom: 10px;
       }
     }
+  }
 
-    .top {
+  &__wrap {
+    position: relative;
+    height: 100%;
+  }
+
+  &__panel {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    &.text-top {
+      text-align: center;
+
       p {
         font-size: 1.3vw;
-        text-align: center;
         font-feature-settings: 'palt' 1;
       }
 
       @include maxW(1023px) {
-        text-align: center;
+        text-align: left;
 
         p {
           font-size: 1.5rem;
@@ -101,19 +149,11 @@
       }
     }
 
-    .test {
-      position: relative;
-      height: 100%;
-    }
-
-    .bottom {
-      transform: translate(0px, 90px) !important;
+    &.text-bottom {
+      transform: translate(0px, 80px);
       line-height: 1.8;
 
       p {
-        width: 70.5%;
-        margin: 0 auto;
-
         font-size: 1.1vw;
         font-feature-settings: 'palt' 1;
 
@@ -123,9 +163,10 @@
       }
 
       @include maxW(1023px) {
+        transform: translate(0px, -20vh);
+
         p {
           width: 100%;
-
           font-size: 1.4rem;
 
           span {
@@ -134,25 +175,11 @@
         }
       }
     }
-  }
-
-  &__panel {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
 
     @include maxW(1023px) {
       display: block;
       height: auto;
-      top: auto;
-      bottom: 30px;
+      bottom: 22px;
       padding: 0 18px;
     }
   }
@@ -164,5 +191,24 @@
 
   span {
     display: inline-block;
+  }
+}
+
+@keyframes scroll-down {
+  0% {
+    height: 0;
+    top: 0;
+  }
+  30% {
+    height: 100%;
+    top: 0;
+  }
+  60% {
+    height: 100%;
+    top: 100%;
+  }
+  100% {
+    height: 100%;
+    top: 100%;
   }
 }
