--- a/src/pages/Home/styles/_firstview.scss
+++ b/src/pages/Home/styles/_firstview.scss
@@ -1,8 +1,10 @@
 // ======== FRIST VIEW
 .firstview {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
   height: 100vh;
-  height: var(--app-height);
-  position: relative;
 
   &__container {
     position: absolute;
