--- a/src/pages/Home/styles/_intro.scss
+++ b/src/pages/Home/styles/_intro.scss
@@ -1,52 +1,28 @@
-// ======== Intro
 .intro {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+
+  //   opacity: 0;
+  //   transition: opacity 0.5s ease-in-out;
+
+  //   &.active {
+  //     opacity: 1;
+  //   }
+
   &__container {
-    align-items: flex-end;
+    width: 100%;
+    height: 100%;
+
     display: grid;
     grid-template-columns: 120px 1fr 120px 1fr 120px;
-
-    position: relative;
-    width: 100%;
-    height: 100vh;
+    align-items: flex-end;
 
     @include maxW(1023px) {
       display: block;
       gap: unset;
-      // height: var(--app-height);
-    }
-  }
-
-  @include maxW(1023px) {
-    // margin-bottom: 150px;
-  }
-
-  &__omoty {
-    width: 100%;
-    margin: 0 auto;
-
-    opacity: 0;
-    transition: opacity 0.5s ease-in-out;
-
-    &.active {
-      opacity: 1;
-    }
-
-    svg {
-      width: 100%;
-      height: 100%;
-    }
-
-    path,
-    rect {
-      fill: var(--main-text-cl);
-    }
-
-    @include maxW(1023px) {
-      width: auto;
-      svg {
-        width: 364px;
-        height: 318.65px;
-      }
     }
   }
 
@@ -100,88 +76,39 @@
     display: flex;
     align-items: center;
 
-    @include maxW(1023px) {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -60%);
-    }
-  }
-
-  &__right {
-    h2 {
-      font-size: 2.4vw;
-      font-weight: 400;
-      margin-bottom: 25px;
+    .omoty {
+      width: 100%;
     }
 
+    svg {
+      width: 100%;
+      height: 100%;
+    }
+
+    path,
+    rect {
+      fill: var(--main-text-cl);
+    }
+
     @include maxW(1023px) {
-      h2 {
-        font-size: 2.6rem;
-        margin-bottom: 10px;
+      width: auto;
+      svg {
+        width: 364px;
+        height: 318.65px;
       }
     }
   }
 
-  &__wrap {
-    position: relative;
-    height: 100%;
-  }
-
-  &__panel {
-    width: 100%;
-    height: 100%;
+  &__top,
+  &__bottom {
     position: absolute;
     left: 0;
-
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-
-    &.text-top {
-      text-align: center;
-
-      p {
-        font-size: 1.3vw;
-        font-feature-settings: 'palt' 1;
-      }
-
-      @include maxW(1023px) {
-        text-align: left;
-
-        p {
-          font-size: 1.5rem;
-        }
-      }
-    }
-
-    &.text-bottom {
-      transform: translate(0px, 80px);
-      line-height: 1.8;
-
-      p {
-        font-size: 1.1vw;
-        font-feature-settings: 'palt' 1;
-
-        span {
-          font-size: 1.2vw;
-        }
-      }
-
-      @include maxW(1023px) {
-        transform: translate(0px, -20vh);
-
-        p {
-          width: 100%;
-          font-size: 1.4rem;
-
-          span {
-            font-size: 1.5rem;
-          }
-        }
-      }
-    }
+    justify-content: center;
 
     @include maxW(1023px) {
       display: block;
@@ -190,6 +117,69 @@
       padding: 0 18px;
     }
   }
+
+  &__top {
+    text-align: center;
+
+    h2 {
+      font-size: 2.4vw;
+      font-weight: 400;
+      margin-bottom: 25px;
+    }
+
+    p {
+      font-size: 1.3vw;
+      font-feature-settings: 'palt' 1;
+    }
+
+    @include maxW(1023px) {
+      text-align: left;
+
+      h2 {
+        font-size: 2.6rem;
+        margin-bottom: 10px;
+      }
+
+      p {
+        font-size: 1.5rem;
+      }
+    }
+  }
+
+  &__bottom {
+    p {
+      transform: translateY(60px);
+      font-size: 1.1vw;
+      font-feature-settings: 'palt' 1;
+      line-height: 1.8;
+
+      span {
+        font-size: 1.2vw;
+      }
+    }
+
+    @include maxW(1023px) {
+      p {
+        transform: translateY(0);
+        width: 100%;
+        font-size: 1.4rem;
+
+        span {
+          font-size: 1.5rem;
+        }
+      }
+    }
+  }
+}
+
+.vertical-scrolling {
+  width: 100%;
+  min-height: 100vh;
+}
+
+.vertical-wrapper {
+  position: relative;
+  height: 100%;
 }
 
 .text-reveal {
@@ -218,4 +208,13 @@
     height: 100%;
     top: 100%;
   }
+}
+
+.parent {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 6vw;
 }
