--- a/src/pages/Home/styles/_intro.scss
+++ b/src/pages/Home/styles/_intro.scss
@@ -5,12 +5,12 @@
   width: 100%;
   height: 100vh;
 
-  //   opacity: 0;
-  //   transition: opacity 0.5s ease-in-out;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
 
-  //   &.active {
-  //     opacity: 1;
-  //   }
+  &.show {
+    opacity: 1;
+  }
 
   &__container {
     width: 100%;
@@ -78,6 +78,8 @@
 
     .omoty {
       width: 100%;
+
+      opacity: 0;
     }
 
     svg {
@@ -97,6 +99,10 @@
         height: 318.65px;
       }
     }
+  }
+
+  &__head {
+    opacity: 0;
   }
 
   &__top,
@@ -147,6 +153,8 @@
   }
 
   &__bottom {
+    opacity: 0;
+
     p {
       transform: translateY(60px);
       font-size: 1.1vw;
@@ -186,8 +194,9 @@
   position: relative;
   overflow: hidden;
 
-  span {
+  span.animation {
     display: inline-block;
+    transform: translateY(200%);
   }
 }
 
@@ -210,11 +219,11 @@
   }
 }
 
-.parent {
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 6vw;
-}
+// .parent {
+//   width: 100%;
+//   height: 100vh;
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+//   font-size: 6vw;
+// }
