scroll fullpage sp (50%)

--- a/src/pages/Home/styles/_intro.scss
+++ b/src/pages/Home/styles/_intro.scss
@@ -93,8 +93,19 @@
     }
 
     @include maxW(1023px) {
-      width: auto;
+      display: block;
+      position: absolute;
+      top: 0;
+
+      .omoty {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -60%);
+      }
+
       svg {
+        margin: 0 auto;
         width: 364px;
         height: 318.65px;
       }
@@ -108,6 +119,7 @@
   &__top,
   &__bottom {
     position: absolute;
+    top: 0;
     left: 0;
     width: 100%;
     height: 100%;
@@ -119,6 +131,7 @@
     @include maxW(1023px) {
       display: block;
       height: auto;
+      top: auto;
       bottom: 22px;
       padding: 0 18px;
     }
@@ -153,13 +166,13 @@
   }
 
   &__bottom {
-    opacity: 0;
-
     p {
       transform: translateY(60px);
       font-size: 1.1vw;
       font-feature-settings: 'palt' 1;
       line-height: 1.8;
+      
+      opacity: 0;
 
       span {
         font-size: 1.2vw;
@@ -168,7 +181,7 @@
 
     @include maxW(1023px) {
       p {
-        transform: translateY(0);
+        transform: translateY(calc(-35vh + 80px + 80px));
         width: 100%;
         font-size: 1.4rem;
 
