--- a/src/pages/Home/styles/_firstview.scss
+++ b/src/pages/Home/styles/_firstview.scss
@@ -6,6 +6,10 @@
   width: 100%;
   height: 100vh;
 
+  @include maxW(1023px) {
+    height: var(--app-height);
+  }
+
   &__container {
     position: absolute;
     bottom: 25px;
