--- a/src/pages/Home/styles/_philosophy.scss
+++ b/src/pages/Home/styles/_philosophy.scss
@@ -1,8 +1,8 @@
 // ======== Philosophy
 .philosophy {
   &__container {
-    margin-top: 200px;
-    padding: 60px 30px 0;
+    // margin-top: 200px;
+    padding: 200px 30px 0;
     display: flex;
     gap: 80px;
 
