--- a/src/pages/Home/styles/_projects.scss
+++ b/src/pages/Home/styles/_projects.scss
@@ -1,51 +1,28 @@
 // ======== Projects
 .projects {
+  width: 100%;
+  height: 100%;
+
   &__container {
-    padding: 60px 30px 0;
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     h2 {
       font-size: 2.1rem;
       font-weight: 400;
       text-transform: uppercase;
-      margin-bottom: 20px;
+
+      opacity: 0;
     }
 
     @include maxW(1023px) {
-      padding: 50px 18px 0;
-
       h2 {
         font-size: 1.9rem;
         margin-bottom: 15px;
-      }
-    }
-  }
-
-  &__showcase {
-    width: 100%;
-    height: 690px;
-    position: relative;
-
-    .items {
-      width: 100%;
-      height: 100%;
-      background-color: var(--main-text-cl);
-      opacity: var(--opacity);
-    }
-
-    p {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-
-      font-size: 1.8rem;
-    }
-
-    @include maxW(1023px) {
-      height: 567px;
-
-      p {
-        font-size: 1.6rem;
       }
     }
   }
