--- a/src/pages/Home/styles/_intro.scss
+++ b/src/pages/Home/styles/_intro.scss
@@ -5,6 +5,7 @@
   &__container {
     width: 100%;
     height: 100%;
+    position: relative;
 
     display: grid;
     grid-template-columns: 120px 1fr 120px 1fr 120px;
