--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -134,7 +134,8 @@
         }
 
         &:checked:before {
-          transform: translateX(1em);
+          // transform: translateX(1em);
+          transform: translateX(13px);
         }
       }
     }
