--- a/src/components/Accordion/Accordion.scss
+++ b/src/components/Accordion/Accordion.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 30px;
+  font-feature-settings: "palt" 1;
 
   @include maxW(1023px) {
     margin-bottom: 20px;
