--- a/src/pages/Home/styles/_intro.scss
+++ b/src/pages/Home/styles/_intro.scss
@@ -8,7 +8,7 @@
     position: relative;
 
     display: grid;
-    grid-template-columns: 120px 1fr 120px 1fr 120px;
+    grid-template-columns: 140px 1fr 170px 1fr 120px;
     align-items: flex-end;
 
     @include maxW(1023px) {
@@ -63,7 +63,7 @@
         position: absolute;
         top: 50%;
         left: 50%;
-        transform: translate(-50%, -60%);
+        transform: translate(-50%, -50%);
       }
 
       svg {
@@ -77,6 +77,7 @@
   &__top,
   &__bottom {
     width: 100%;
+    padding-left: 15px;
 
     @include maxW(1023px) {
       display: block;
@@ -89,29 +90,32 @@
 
   &__top {
     h2 {
-      font-size: 2.4vw;
+      font-size: 3.8rem;
       font-weight: 400;
       margin-bottom: 25px;
+      letter-spacing: -0.7px;
     }
 
     p {
-      font-size: 1.3vw;
+      font-size: 1.8rem;
       line-height: 1.3;
       font-feature-settings: 'palt' 1;
 
       span {
-        font-size: 1.4vw;
+        font-size: 1.9rem;
       }
     }
 
     @include maxW(1023px) {
       h2 {
         font-size: 2.6rem;
-        margin-bottom: 10px;
+        margin-bottom: 20px;
+        letter-spacing: -0.3px;
       }
 
       p {
         font-size: 1.4rem;
+        line-height: 1.5;
 
         span {
           font-size: 1.5rem;
@@ -124,7 +128,7 @@
     margin-top: 55px;
 
     p {
-      font-size: 1.1vw;
+      font-size: 1.5rem;
       font-feature-settings: 'palt' 1;
       line-height: 1.8;
 
@@ -133,17 +137,18 @@
       }
 
       span {
-        font-size: 1.2vw;
+        font-size: 1.6rem;
       }
     }
 
     @include maxW(1023px) {
       p {
         width: 100%;
-        font-size: 1.4rem;
+        font-size: 1.3rem;
+        line-height: 1.7;
 
         span {
-          font-size: 1.5rem;
+          font-size: 1.4rem;
         }
       }
     }
