--- a/src/pages/Home/styles/_philosophy.scss
+++ b/src/pages/Home/styles/_philosophy.scss
@@ -1,8 +1,7 @@
 // ======== Philosophy
 .philosophy {
   &__container {
-    // margin-top: 200px;
-    padding: 200px 30px 0;
+    padding: 150px 30px 0;
     display: flex;
     gap: 80px;
 
@@ -89,7 +88,7 @@
     display: flex;
     justify-content: space-between;
     gap: 50px;
-    margin-bottom: 110px;
+    margin-bottom: 120px;
 
     h2 {
       font-size: 3.4rem;
@@ -144,7 +143,8 @@
 
     p {
       font-size: 1.6rem;
-      line-height: 1.5;
+      font-feature-settings: "palt" 1;
+      line-height: 1.8;
       margin-bottom: 35px;
     }
 
@@ -153,6 +153,7 @@
 
       p {
         font-size: 1.4rem;
+        line-height: 1.7;
         margin-bottom: 30px;
       }
     }
