--- a/src/pages/Home/styles/_philosophy.scss
+++ b/src/pages/Home/styles/_philosophy.scss
@@ -186,6 +186,7 @@
 
       p {
         font-size: 1.5rem;
+        line-height: 1.7;
         letter-spacing: 0;
         margin-bottom: 30px;
       }
