--- a/src/pages/Home/styles/_intro.scss
+++ b/src/pages/Home/styles/_intro.scss
@@ -207,6 +207,11 @@
   bottom: 35px;
 
   opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+
+  &.fade {
+    opacity: 1;
+  }
 
   .line {
     display: block;
