--- a/src/pages/Home/styles/_intro.scss
+++ b/src/pages/Home/styles/_intro.scss
@@ -41,7 +41,7 @@
 
     .omoty {
       width: 100%;
-      transform: translateX(57.8%);
+      transform: translateX(calc(50% + 80px));
     }
 
     svg {
@@ -67,9 +67,11 @@
       }
 
       svg {
+        // width: 364px;
+        // height: 318.65px;
         margin: 0 auto;
-        width: 364px;
-        height: 318.65px;
+        width: 80%;
+        padding-right: 3.5%;
       }
     }
   }
@@ -98,28 +100,29 @@
 
     p {
       font-size: 1.8rem;
-      line-height: 1.3;
+      line-height: 1.5;
       font-feature-settings: 'palt' 1;
+    }
 
-      span {
-        font-size: 1.9rem;
+    @include minW(1441px) {
+      h2 {
+        font-size: 2.64vw;
+      }
+
+      p {
+        font-size: 1.25vw;
       }
     }
 
     @include maxW(1023px) {
       h2 {
-        font-size: 2.6rem;
+        font-size: 2.8rem;
         margin-bottom: 20px;
         letter-spacing: -0.3px;
       }
 
       p {
         font-size: 1.4rem;
-        line-height: 1.5;
-
-        span {
-          font-size: 1.5rem;
-        }
       }
     }
   }
@@ -138,6 +141,16 @@
 
       span {
         font-size: 1.6rem;
+      }
+    }
+
+    @include minW(1441px) {
+      p {
+        font-size: 1.042vw;
+
+        span {
+          font-size: 1.11vw;
+        }
       }
     }
 
