--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -88,8 +88,8 @@
         position: absolute;
         border-radius: 50%;
         content: '';
-        top: 0.15em;
-        left: 0.2em;
+        top: 2.4px;
+        left: 3.2px;
         width: 14px;
         height: 14px;
         background: var(--main-text-cl);
@@ -104,7 +104,7 @@
       }
 
       &:checked:before {
-        transform: translateX(1.5em);
+        transform: translateX(19.5px);
       }
     }
 
